# HM4

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yaml  hm4_model_weights.pth  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: HBM_holdout_accuracy_vals.pt  HBM_holdout_bin_props.pt  HBM_holdout_confidence_vals.pt  HBM_holdout_pred_probs.pt  HBM_test_accuracy_vals.pt  HBM_test_bin_props.pt  HBM_test_confidence_vals.pt  HBM_test_pred_probs.pt  HM4_holdout_accuracy_vals.pt  HM4_holdout_confidence_vals.pt  HM4_holdout_pred_probs.pt  HM4_input_spectra_example.npy  HM4_reconstruction_spectra_example.npy  HM4_test_accuracy_vals.pt  HM4_test_bin_props.pt  HM4_test_confidence_vals.pt  HM4_test_set_confusion_matrix.npy  dhoundiyal_holdout_accuracy_vals.pt  dhoundiyal_holdout_confidence_vals.pt  dhoundiyal_holdout_pred_probs.pt  dhoundiyal_test_accuracy_vals.pt  dhoundiyal_test_confidence_vals.pt
figure_making/: classification_figs.ipynb  data_split_fig.ipynb  reconstruction_fig.ipynb
hm4/: VAE_classifier_248.py  expected_cost.py  labelling.py  log_p_calc.py  plot.py  preprocessing.py  res_blocks.py
notebooks/: HM4_tutorial.ipynb
notebooks/HBM_benchmark/: HBM_benchmark.ipynb
notebooks/HM4_results/: hm4_results_holdout_set.ipynb  hm4_results_test_set.ipynb
notebooks/RandomForest_benchmark/: RF_results_holdout.ipynb  hyper_param_tuning.py  original_training.ipynb  retrain_platt_data.ipynb
scripts/: bland_pixel_finder.py  mineral_data_collation.py  ratio_pixels.py  train_HM4.py  train_test_holdout_split.py
scripts/dhoundiyal_benchmark/: holdout_preprocessing.py  mineral_data_aggregation.py  traintest_preprocessing.py
tests/: test_labelling.py  test_preprocessing.py
