[project]
name = "hm4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.0",
    "bottleneck>=1.3.7",
    "bqplot>=0.12.43",
    "click>=8.1.7",
    "coverage>=7.2.2",
    "cryptography>=43.0.0",
    "expected-cost>=1.0",
    "h5py>=3.11.0",
    "imageio>=2.36.0",
    "ipydatawidgets>=4.3.2",
    "ipykernel>=6.29.4",
    "ipython>=8.28.0",
    "ipyvolume>=0.6.3",
    "ipyvue>=1.11.0",
    "ipyvuetify>=1.10.0",
    "ipywebrtc>=0.6.0",
    "ipywidgets>=8.1.5",
    "joblib>=1.4.2",
    "jupyter-client>=8.6.2",
    "jupyter-core>=5.7.2",
    "jupyterlab-widgets>=3.0.13",
    "mat73>=0.63",
    "matplotlib>=3.9.2",
    "mypy>=1.8.0",
    "n2n4m>=0.02",
    "numba>=0.59.1",
    "numexpr>=2.8.7",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "packaging>=23.1",
    "pandas>=2.2.2",
    "paramiko>=3.4.1",
    "pillow>=10.3.0",
    "pre-commit>=3.4.0",
    "pyarrow>=16.1.0",
    "pynacl>=1.5.0",
    "pysftp>=0.2.9",
    "pysocks>=1.7.1",
    "pysptools>=0.15.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pythreejs>=2.4.2",
    "pyyaml>=6.0.1",
    "ray>=2.24.0",
    "requests>=2.32.3",
    "scikit-learn>=1.5.0",
    "scikit-learn-extra>=0.3.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "spectral>=0.23.1",
    "tifffile>=2023.8.12",
    "torch>=2.3.1",
    "torchmetrics>=1.4.0.post0",
    "tqdm>=4.66.4",
    "triton>=2.3.1",
    "umap-learn>=0.5.5",
]

[tool.uv.sources]
n2n4m = { git = "https://github.com/rob-platt/n2n4m" }

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hm4"
module-root = ""
